fix: grain not showing on statuspanel

--- a/mod-floaty-ui/chrome.css
+++ b/mod-floaty-ui/chrome.css
@@ -298,13 +298,13 @@
   /* STATUS PANEL ----------------------------------------------------------- */
 
   @media (-moz-bool-pref: "mod.floaty.enable-statuspanel") {
-    #statuspanel-label {
+    #statuspanel {
       background: var(--floaty-bg-color) !important;
       backdrop-filter: var(--floaty-blur-filter) !important;
       border: var(--floaty-border-style) !important;
       border-radius: var(--floaty-border-radius) !important;
       box-shadow: var(--zen-big-shadow) !important;
-      padding-inline: 9px !important;
+      padding: 2px 9px !important;
       margin: var(--floaty-margin) !important;
 
       &::after {
@@ -315,7 +315,15 @@
         pointer-events: none !important;
         z-index: 0 !important;
         opacity: var(--zen-grainy-background-opacity, 0) !important;
+        border-radius: inherit !important;
       }
+    }
+
+    #statuspanel-label {
+      background: transparent !important;
+      padding: 0px !important;
+      border: 0px !important;
+      margin: 0px !important;
     }
   }
 }
